Add basic navbar foundation

--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,7 +1,11 @@
-<div id="navbar">
+<div class="topnav" id="topnav">
     <ul>
-        <li>Test</li>
-        <li>Second</li>
-        <li>Third!</li>
+        <li><a href="#home" class="nav-active">Home</a>
+        <li><a href="#news">News</a>
+        <li><a href="#contact">Contact</a>
+        <li><a href="#about">About</a>
+        <li class="nav-hamburger"><a href="javascript:void(0);" onclick="navHamburgerClicked()">
+                <div>≠</div>
+            </a>
     </ul>
 </div>
