--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,11 +1,12 @@
 <div class="topnav" id="topnav">
-    <ul>
-        <li><a href="#home" class="nav-active">Home</a>
-        <li><a href="#news">News</a>
-        <li><a href="#contact">Contact</a>
-        <li><a href="#about">About</a>
-        <li class="nav-hamburger"><a href="javascript:void(0);" onclick="navHamburgerClicked()">
-                <div>≠</div>
-            </a>
-    </ul>
+    <div>
+        <ul class="nav-menu">
+            <li><a href="#" class="nav-active">Hem</a>
+            <li><a href="#">Artiklar</a>
+            <li><a href="#">Om sidan</a>
+            <li class="nav-hamburger"><a href="javascript:void(0);" onclick="navHamburgerClicked()">
+                    <div>≠</div>
+                </a>
+        </ul>
+    </div>
 </div>
