--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -4,8 +4,13 @@
             <li><a href="#" class="nav-active">Hem</a>
             <li><a href="#">Artiklar</a>
             <li><a href="#">Om sidan</a>
-            <li class="nav-hamburger"><a href="javascript:void(0);" onclick="navHamburgerClicked()">
-                    <div>≠</div>
+            <li class="nav-hamburger">
+                <a href="javascript:void(0);" onclick="navHamburgerClicked()">
+                    <svg viewBox="0 0 20 14.5" width="20" height="14.5" fill="white">
+                        <rect width="100" height="2.5"></rect>
+                        <rect y="6" width="100" height="2.5"></rect>
+                        <rect y="12" width="100" height="2.5"></rect>
+                    </svg>
                 </a>
         </ul>
     </div>
