--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -42,7 +42,7 @@
   vertical-align: top;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 430px) {
   .nav-menu li:not(:first-child) {
     display: none;
     align-items: center;
@@ -53,7 +53,7 @@
   }
 
   .topnav.responsive {
-    padding: 10px var(--gutters);
+    padding: 0;
   }
 
   .topnav.responsive div ul li {
