--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -1,11 +1,11 @@
 .topnav {
    overflow: hidden;
-   background-color: #333;
+   background-color: #2C363F;
    padding: 0 var(--gutters);
 }
 
 .nav-menu {
-  padding: 0;
+  padding: 8px;
   margin: 0;
 }
 
@@ -13,23 +13,29 @@
   display: inline-block;
   text-align: center;
   height: 100%;
+  margin-right: 10px;
+}
+
+.nav-menu li:last-child {
+  margin-right: 0;
 }
 
 .nav-menu li a {
   text-decoration: none;
   display: block;
-  color: #f2f2f2;
-  padding: 14px 16px;
-}
-
-.nav-menu li a.nav-active {
-  background-color: #4CAF50;
-  color: white;
+  color: #FEFFFE;
+  padding: 8px 15px;
+  border-radius: 5px;
 }
 
 .nav-menu li a:hover {
-  background-color: #ddd;
-  color: black;
+  color: #FEFFFE;
+  background-color: #47515a;
+}
+
+.nav-menu li a.nav-active {
+  color: #2C363F;
+  background-color: #FEFFFE;
 }
 
 .nav-menu li.nav-hamburger {
@@ -50,6 +56,15 @@
 
   .nav-menu li.nav-hamburger {
     display: inline-block;
+  }
+
+  .topnav.responsive div li {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .topnav.responsive div li:last-child {
+    margin-bottom: 0;
   }
 
   .topnav.responsive {
